--- a/package.json
+++ b/package.json
@@ -10,19 +10,17 @@
     "eject": "react-scripts eject"
   },
   "dependencies": {
-    "@reduxjs/toolkit": "^2.3.0",
-    "@testing-library/jest-dom": "^6.6.3",
-    "@testing-library/react": "^16.0.1",
-    "@testing-library/user-event": "^14.5.2",
-    "axios": "^1.7.7",
+    "@reduxjs/toolkit": "^2.5.0",
+    "axios": "^1.7.9",
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
+    "cra-template": "^1.2.0",
     "nth-check": "^2.1.1",
-    "postcss": "^8.4.49",
-    "react": "^18.3.1",
-    "react-bootstrap": "^2.10.5",
-    "react-dom": "^18.3.1",
-    "react-redux": "^9.1.2",
+    "postcss": "^8.5.1",
+    "react": "^19.0.0",
+    "react-bootstrap": "^2.10.7",
+    "react-dom": "^19.0.0",
+    "react-redux": "^9.2.0",
     "react-scripts": "^5.0.1",
     "resolve-url-loader": "^5.0.0",
     "web-vitals": "^4.2.4"
@@ -44,5 +42,11 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.2.0",
+    "@testing-library/user-event": "^14.6.0"
   }
 }
