--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
     "eject": "react-scripts eject"
   },
   "dependencies": {
-    "@reduxjs/toolkit": "^2.9.2",
-    "axios": "^1.12.2",
+    "@reduxjs/toolkit": "^2.10.1",
+    "axios": "^1.13.2",
     "bootstrap": "^5.3.8",
     "bootstrap-icons": "^1.13.1",
     "cra-template": "^1.3.0",
@@ -40,6 +40,10 @@
     "transformIgnorePatterns": [
       "node_modules/(?!(axios)/)"
     ]
+  },
+  "overrides": {
+    "nth-check": "^2.1.1",
+    "webpack-dev-server": "^5.2.1"
   },
   "eslintConfig": {
     "extends": [
